<resources>
    <string name="app_name">AudioHub</string>

    <string name="start_activity_heading">Welcome to AudioHub</string>
    <string name="start_activity_new_account_button">Create New Account</string>
    <string name="start_activity_login_button">Login</string>

    <string name="reg_activity_name_hint">Name</string>
    <string name="reg_activity_pass_hint">Password</string>
    <string name="reg_activity_email_hint">Your Email</string>
    <string name="reg_activity_create_button">Create Account</string>
    <string name="reg_activity_txt_view">Create New Account</string>
    <string name="reg_activity_password_guide">Please include at least one UPPERCASE,
        LOWERCASE, NUMBER and SPECIAL CHARACTER in your password</string>

    <string name="login_activity_txt_view">Login to your Account</string>
    <string name="login_activity_login_btn">LOGIN</string>


    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_all_users">All Users</string>



    <string name="my_files_fragment_title">MyFiles</string>

    <string name="projects_fragment_title">Projects</string>
    <string name="projects_fragment_project_hint">New Project</string>
    <string name="projects_fragment_addBtn">Add</string>
    <string name="projects_fragment_row_itemProject">Name</string>
    <string name="projects_fragment_row_itemDate">Date</string>

    <string name="project_member_fragment_add_btn">ADD</string>
    <string name="project_member_fragment_name">Name</string>
    <string name="project_member_fragment_status">Status</string>

    <string name="record_fragment_message">Press Button to Record</string>
    <string name="record_fragment_file_hint">Enter File Name</string>


    <string name="player_sheet_header">Audio Player</string>
    <string name="player_sheet_filename">File Name</string>


    <string name="main_project_viewMembers">VIEW MEMBERS</string>


    <string name="all_user_single_display_name">Name</string>
    <string name="all_user_single_display_status">Status</string>
    <string name="search_activity_button">Search</string>

    <string name="invite_user_button">INVITE TO PROJECT</string>
    <string name="invite_decline_user_button">DECLINE INVITATION</string>

    <string name="main_settings_changeImage_btn">CHANGE IMAGE</string>
    <string name="main_settings_changeStatus_btn">CHANGE STATUS</string>
    <string name="main_settings_displayName_text">Display Name</string>
    <string name="main_settings_displayStatus_text">AudioHub Member</string>
    <string name="main_settings_displayEmail_text">Email</string>

    <string name="status_input_hint_txt">Your status</string>
    <string name="status_input_btn">UPDATE STATUS</string>

    <string name="notification_message">has sent you invitation</string>
    <string name="notification_accept_btn">ACCEPT</string>
    <string name="notification_decline_btn">DECLINE</string>

    <string name="accept_accept_btn">ACCEPT</string>
    <string name="accept_decline_btn">DECLINE</string>

    <string name="search_frag_search_text">Search users</string>

    <string name="player_activity_play_button">Plays song</string>
    <string name="player_activity_forward_button">Plays next song</string>
    <string name="player_activity_backward_button">Plays previous song</string>
    <string name="player_activity_timer">00:00</string>
    <string name="player_activity_comment_hint">Comment</string>
    <string name="player_activity_post_btn">Post</string>
    <string name="player_activity_dot">:</string>
    <string name="player_activity_date">Date</string>




</resources>
